# mcpserver-distributable

./: pyproject.toml  readme.md  test.py
.github/workflows/: ci.yml
