[project]
name = "mcp-server-deepdive-deployment"
version = "0.1.0"
description = "create a package for distribution of mcp server"
authors = [
    {name = "Dinesh"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli] (>=1.25.0,<2.0.0)"
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

